--- a/html/CH18.html
+++ b/html/CH18.html
@@ -80,7 +80,7 @@
             class="text-center mb-16"
         >
             <h1 class="text-6xl md:text-8xl chinese-title">配分函數 <span class="text-accent">攻克</span></h1>
-            <p class="english-subtitle text-2xl">Chapter 18: Confronting the Partition Function</p>
+            <p class="english-subtitle text-2xl"><a href="https://deep-learning-101.github.io/">Chapter 18: Confronting the Partition Function</a></p>
             <p class="text-lg mt-2 text-gray-400">Presented by Jarrod Ho (Jiero), 2018.01.12</p>
         </motion.div>
 
