--- a/html/No44.html
+++ b/html/No44.html
@@ -146,7 +146,7 @@
                 initial={{ opacity: 0, y: -30 }}
                 animate={{ opacity: 1, y: 0 }}
                 transition={{ duration: 0.8, delay: 0.2, ease: "easeOut" }}>
-                Deep Learning 101 Highlights - August 21, 2020 - Mark Liou
+                <a href="https://deep-learning-101.github.io/">Deep Learning 101 - August 21, 2020 - Mark Liou</a>
             </motion.p>
         </header>
 
