--- a/html/No47.html
+++ b/html/No47.html
@@ -195,7 +195,7 @@
             <h1 class="text-5xl md:text-7xl font-extrabold mb-4">
                 <span class="highlight-text">深度學習</span> <span class="text-slate-300">與</span> <span class="highlight-text">傅立葉神經算子</span>
             </h1>
-            <p class="text-xl md:text-2xl text-slate-400 mb-8">探索 Deep Learning 101 社群的分享與傅立葉神經算子的奧秘</p>
+            <p class="text-xl md:text-2xl text-slate-400 mb-8"><a href="https://deep-learning-101.github.io/">探索 Deep Learning 101 社群的分享與傅立葉神經算子的奧秘</a></p>
             <p class="text-sm text-slate-500">Exploring insights from the Deep Learning 101 community and the intricacies of Fourier Neural Operators.</p>
         </motion.section>
 
