--- a/html/No44.html
+++ b/html/No44.html
@@ -139,7 +139,7 @@
                 initial={{ opacity: 0, y: -50 }}
                 animate={{ opacity: 1, y: 0 }}
                 transition={{ duration: 0.8, ease: "easeOut" }}>
-                神經網路裡的<span class="text-purple-400">黑執事</span>
+                <a href="https://deep-learning-101.github.io/">神經網路裡的<span class="text-purple-400">黑執事</a></span>
             </motion.h1>
             <motion.p 
                 class="sub-title"
