--- a/html/No47.html
+++ b/html/No47.html
@@ -193,7 +193,7 @@
             class="text-center py-16"
         >
             <h1 class="text-5xl md:text-7xl font-extrabold mb-4">
-                <span class="highlight-text"><a href="https://deep-learning-101.github.io/">Deep Learning 101 與 https://deep-learning-101.github.io/</a></span>
+                <span class="highlight-text"><a href="https://deep-learning-101.github.io/">https://deep-learning-101.github.io/</a></span>
             </h1>
             <h1 class="text-5xl md:text-7xl font-extrabold mb-4">
                 <span class="highlight-text">深度學習</span> <span class="text-slate-300">與</span> <span class="highlight-text">傅立葉神經算子</span>
