--- a/html/NO44.html
+++ b/html/NO44.html
@@ -134,6 +134,8 @@
             border-radius: 1.5rem;
             margin-bottom: 2rem;
             box-shadow: 0 2px 4px rgba(0,0,0,0.03);
+            margin: 0 auto;
+            text-align: center;
         }
         .top-info-title {
             font-size: 2rem; /* 32px */
