--- a/html/CH7.html
+++ b/html/CH7.html
@@ -128,13 +128,6 @@
             flex-direction: column;
         }
 
-        .top-info-box {
-            background-color: #e9e9ed;
-            padding: 1.5rem 2rem;
-            border-radius: 1.5rem;
-            margin-bottom: 2rem;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.03);
-        }
         .top-info-title {
             font-size: 2rem; /* 32px */
             font-weight: 700;
@@ -176,6 +169,15 @@
         .table-container {
             overflow-x: auto; /* Allows table to be scrollable on small screens */
         }
+        .top-info-box {
+            background-color: #e9e9ed;
+            padding: 1.5rem 2rem;
+            border-radius: 1.5rem;
+            margin-bottom: 2rem;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.03);
+            margin: 0 auto;
+            text-align: center;
+        }
     </style>
 </head>
 <body>
@@ -185,14 +187,13 @@
             <h1 class="top-info-title">Deep Learning 101</h1>
             <div class="top-info-text">
                 <p>
-                    <a href="https://deep-learning-101.github.io/" target="_blank" rel="noopener noreferrer">https://deep-learning-101.github.io/</a>
+                    <a href="https://deep-learning-101.github.io/" rel="noopener noreferrer">回上一頁 https://deep-learning-101.github.io/</a>
                 </p>
                 <p>The top private AI Meetup in Taiwan, launched on 2016/11/11 @ 83F, Taipei 101</p>
                 <p><strong>台灣曾經最高最早發起的深度學習社群 @ 83F, 台北101</strong></p>
                 <p class="mt-3">
-                    <strong>Regularization for Deep Learning @ Deep Learning Book Chapter 7</strong>
+                    <strong>Regularization for Deep Learning @ Deep Learning Book Chapter 7 @ 2017/02/10</strong>
                 </p>
-                <p><em>2017/02/10</em></p>
                 <p>
                     <a href="https://www.youtube.com/watch?v=gSymqOhKW8o" target="_blank" rel="noopener noreferrer"><i class="fab fa-youtube mr-1"></i> Video: Regularization Techniques in Deep Learning</a>
                     <span class="text-xs text-slate-500">(Covers concepts like L1/L2, Dropout, Data Augmentation, Early Stopping, etc., based on the book chapter.)</span>
