--- a/html/CH9.html
+++ b/html/CH9.html
@@ -116,6 +116,8 @@
             border-radius: 1.5rem;
             margin-bottom: 2rem;
             box-shadow: 0 2px 4px rgba(0,0,0,0.03);
+            margin: 0 auto;
+            text-align: center;
         }
         .top-info-title {
             font-size: 2rem;
@@ -146,7 +148,7 @@
         <div class="top-info-box">
             <h1 class="top-info-title">Deep Learning 101</h1>
             <div class="top-info-text">
-                <p><a href="https://deep-learning-101.github.io/" target="_blank" rel="noopener noreferrer">https://deep-learning-101.github.io/</a></p>
+                <p><a href="https://deep-learning-101.github.io/" rel="noopener noreferrer">回上一頁 https://deep-learning-101.github.io/</a></p>
                 <p>The top private AI Meetup in Taiwan, launched on 2016/11/11 @ 83F, Taipei 101</p>
                 <p><strong>台灣曾經最高最早發起的深度學習社群 @ 83F, 台北101</strong></p>
                 <p class="mt-3"><strong>Convolutional Neural Networks @ Deep Learning Book Chapter 9</strong></p>
