--- a/html/NO44.html
+++ b/html/NO44.html
@@ -175,11 +175,13 @@
                 <p class="mt-3">
                     <strong>神經網路的黑執事 - 深度學習進階訓練技巧與應用</strong>
                 </p>
-                <p><em>2020/08/21 - Mark Liou</em></p>
+                <p><em>2020/08/21 - Mark Liou </em><audio controls style="width:100px; height:12px;"><source src="notebooklm-mp3/NO44.mp3" type="audio/mpeg"></audio></p>
                 <p>
                     <a href="https://www.youtube.com/watch?v=gMaQTqZUW58" target="_blank" rel="noopener noreferrer"><i class="fab fa-youtube mr-1"></i> Video: Advanced Training Techniques in Deep Learning</a>
-                    <span class="text-xs text-slate-500">(Covers data & model regularization, label smoothing, data augmentation, semi-supervised and self-supervised learning.)</span>
                 </p>
+                <p>
+                    <span class="text-xs text-slate-500">(Covers data & model regularization, label smoothing, data augmentation, semi-supervised and self-supervised learning.)</span>
+                </p>                
             </div>
         </div>
 
