--- a/html/NO31.html
+++ b/html/NO31.html
@@ -168,7 +168,7 @@
             <h1 class="top-info-title">Deep Learning 101</h1>
             <div class="top-info-text">
                 <p>
-                    <a href="https://deep-learning-101.github.io/" target="_blank" rel="noopener noreferrer">https://deep-learning-101.github.io/</a>
+                    <a href="https://deep-learning-101.github.io/" rel="noopener noreferrer">回上一頁 https://deep-learning-101.github.io/</a>
                 </p>
                 <p>The top private AI Meetup in Taiwan, launched on 2016/11/11 @ 83F, Taipei 101</p>
                 <p><strong>台灣曾經最高最早發起的深度學習社群 @ 83F, 台北101</strong></p>
