--- a/html/NO29.html
+++ b/html/NO29.html
@@ -183,6 +183,7 @@
                 <p class="mt-3">
                     <strong>神經網路的黑執事 - 深度學習進階訓練技巧與應用</strong>
                 </p>
+                <p><em>2019/03/08 - Mark Chang</em></p>
                 <p>
                     <a href="https://www.youtube.com/watch?v=C0HeMGPYif8" target="_blank" rel="noopener noreferrer"><i class="fab fa-youtube mr-1"></i> Video: Key Concepts in Domain Adaptation</a>
                 </p>
