--- a/html/NO44.html
+++ b/html/NO44.html
@@ -175,6 +175,7 @@
                 <p class="mt-3">
                     <strong>神經網路的黑執事 - 深度學習進階訓練技巧與應用</strong>
                 </p>
+                <p><em>2020/08/21 - Mark Liou</em></p>
                 <p>
                     <a href="https://www.youtube.com/watch?v=gMaQTqZUW58" target="_blank" rel="noopener noreferrer"><i class="fab fa-youtube mr-1"></i> Video: Advanced Training Techniques in Deep Learning</a>
                 </p>
